<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ASDS Mobile</string>
    <string name="portal_url">https://portal.ihre-wegbegleiterin.ch/custom/asds_mobile/mobile/index.php?stage=10</string>
    <string name="header_default_subtitle">Persönliches Mitarbeitenden-Cockpit</string>
    <string name="new_entry">Neu erfassen</string>
    <string name="nav_home">Übersicht</string>
    <string name="nav_appointments">Termine</string>
    <string name="nav_time">Zeit</string>
    <string name="nav_trips">Fahrten</string>
    <string name="nav_more">Mehr</string>
    <string name="choose_source_title">Datei auswählen</string>
    <string name="option_photo">Foto aus Google Fotos</string>
    <string name="option_files">Fotos, Dateien oder PDF auswählen</string>
    <string name="option_multiple_files">Mehrere Fotos oder Dateien auswählen</string>
    <string name="option_camera">Neues Foto aufnehmen</string>
    <string name="option_pdf">PDF auswählen</string>
    <string name="cancel">Abbrechen</string>
    <string name="error_no_camera">Kamera-App nicht verfügbar.</string>
    <string name="error_no_picker">Datei- oder Fotoauswahl nicht verfügbar.</string>
    <string name="error_no_pdf">PDF-Auswahl nicht verfügbar.</string>
    <string name="error_generic">Auswahl fehlgeschlagen: %1$s</string>
    <string name="load_error_title">Verbindung nicht möglich</string>
    <string name="load_error_message">Die ASDS-Plattform konnte nicht geladen werden. Prüfe die Internetverbindung und versuche es erneut.</string>
    <string name="retry">Erneut versuchen</string>
    <string name="quick_title">Neu erfassen</string>
    <string name="quick_time">Arbeitszeit starten</string>
    <string name="quick_appointment">Termin erfassen</string>
    <string name="quick_protocol">Protokoll erfassen</string>
    <string name="quick_expense">Spese oder Ausgabe</string>
    <string name="quick_trip">Fahrt manuell erfassen</string>
    <string name="quick_task">Aufgabe erstellen</string>
    <string name="quick_customer">Kundenakte öffnen</string>
    <string name="quick_security">Sicherheit &amp; Offline</string>
    <string name="quick_leadership">Leitung &amp; Administration</string>
    <string name="download_started">Download wurde gestartet.</string>
    <string name="download_failed">Datei konnte nicht heruntergeladen werden.</string>
    <string name="external_app_missing">Keine passende App gefunden.</string>
    <string name="security_title">Sicherheit &amp; Offline</string>
    <string name="security_status">Lokale Entwürfe: %1$d\nSynchronisationswarteschlange: %2$d</string>
    <string name="security_enable_lock">App-Sperre aktivieren</string>
    <string name="security_disable_lock">App-Sperre deaktivieren</string>
    <string name="security_lock_now">App jetzt sperren</string>
    <string name="security_enable_notifications">Benachrichtigungen aktivieren</string>
    <string name="security_disable_notifications">Benachrichtigungen deaktivieren</string>
    <string name="security_sync_now">Jetzt synchronisieren</string>
    <string name="security_open_center">Sicherheitscenter öffnen</string>
    <string name="security_sync_started">Synchronisation wurde gestartet.</string>
    <string name="leadership_title">Leitung &amp; Administration</string>
    <string name="leadership_cockpit">Leitungs-Cockpit</string>
    <string name="leadership_staff">Mitarbeitendenübersicht</string>
    <string name="leadership_approvals">Freigaben</string>
    <string name="leadership_protocols">Offene Protokolle</string>
    <string name="leadership_calendar">Teamtermine</string>
    <string name="leadership_month">Monatskontrolle</string>
</resources>
